--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,11 +78,6 @@ svg text {
 }
 /*end bullet chart*/
 
-/*live discourse*/
-#live-discourse {
-	margin-bottom: 5%;
-}
-
 #chat {
 	margin-top: 4%;
 	margin-bottom: 10%;
